syntax = "proto3";

//生成多个类
option java_multiple_files = true;
option java_package = "com.moji.helloworld";
option java_outer_classname = "HelloWorldProto";

message HelloRequest {
    string name = 1;
    int32 sex = 2;
    int32 age = 3;
}

message HelloResponse {
    int32 code = 1;
    string msg = 2;
}

service Information {
    rpc GetInformation(HelloRequest) returns (HelloResponse){}
}